; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_jump.c_reg_or_subregno.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_jump.c_reg_or_subregno.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SUBREG = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @reg_or_subregno(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i64 @GET_CODE(i32 %3)
  %5 = load i64, i64* @SUBREG, align 8
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i32, i32* %2, align 4
  %9 = call i32 @SUBREG_REG(i32 %8)
  store i32 %9, i32* %2, align 4
  br label %10

10:                                               ; preds = %7, %1
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @REG_P(i32 %11)
  %13 = call i32 @gcc_assert(i32 %12)
  %14 = load i32, i32* %2, align 4
  %15 = call i32 @REGNO(i32 %14)
  ret i32 %15
}

declare dso_local i64 @GET_CODE(i32) #1

declare dso_local i32 @SUBREG_REG(i32) #1

declare dso_local i32 @gcc_assert(i32) #1

declare dso_local i32 @REG_P(i32) #1

declare dso_local i32 @REGNO(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
